2014-10-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/python.el (inferior-python-mode): Use add-hook.

	* Makefile.in (AUTOGEN_VCS): Remove emulation/tpu-edt.el.

2014-10-20  Glenn Morris  <rgm@gnu.org>

	* emulation/crisp.el, emulation/tpu-edt.el, emulation/tpu-extras.el:
	* emulation/tpu-mapper.el, emulation/vi.el, emulation/vip.el:
	* emulation/ws-mode.el: Move to obsolete/.  [Backport]

2014-10-20  Glenn Morris  <rgm@gnu.org>

	* cus-start.el (history-length): Bump :version.  [Backport]

2014-10-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* obsolete/cc-compat.el: Make obsolete (bug#18561).

	* epg-config.el (epg-gpg-program): Don't use absolute names by default.

	* emacs-lisp/bytecomp.el (=, <, >, <=, >=): Don't optimize multi-arg
	case (bug#18767).

2014-10-20  Glenn Morris  <rgm@gnu.org>

	* Version 24.4 released.

2014-10-15  Alan Mackenzie  <acm@muc.de>

	* cus-edit.el (custom-command-apply): Specify the return value in
	the doc string.
	(Custom-reset-standard): Save custom-file (e.g. .emacs) only when
	custom-command-apply has returned non-nil.

2014-10-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/lisp.el (lisp--local-variables-1): Handle `quote'.
	Backported (bug#18688).

2014-10-14  Eli Zaretskii  <eliz@gnu.org>

	* emacs-lisp/tabulated-list.el (tabulated-list-mode):
	Force bidi-paragraph-direction to 'left-to-right'.  This fixes
	buffer-menu display when the first buffer happens to start with
	R2L letter.

2014-10-13  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/authors.el (authors-aliases, authors-fixed-case)
	(authors-obsolete-files-regexps): Additions.
	(authors-no-scan-regexps): New constant.
	(authors-no-scan-file-p): New function.
	(authors): Respect authors-no-scan-file-p.

2014-10-12  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	Fix import completion.  (Bug#18582)
	* progmodes/python.el (python-shell-completion-get-completions):
	Fix import case regexp.

2014-10-10  Stefan Monnier  <monnier@iro.umontreal.ca>
