@@ -1,3 +1,11 @@
+2014-10-20  Glenn Morris  <rgm@gnu.org>
+
+	* dired.el (dired-read-regexp): Make obsolete.
+	(dired-mark-files-regexp, dired-mark-files-containing-regexp)
+	(dired-flag-files-regexp):
+	* dired-aux.el (dired-mark-read-regexp):
+	* dired-x.el (dired-mark-unmarked-files): Use read-regexp directly.
+
 2014-10-20  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* progmodes/python.el (inferior-python-mode): Use add-hook.
